[package]
name = "DBTD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0-rc1"
cgmath = { version = "0.18", features = [ "serde" ] }
bincode = "1.3.3"

mysql = "*"
snap = "0.2"
itertools = "0.10.1"
anymap = "*"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
bimap = "*"
crossbeam-channel = "0.5.0"
enum_dispatch = "0.3.8"
ggez-egui = "0.2.1"
egui = "0.19.0"